# pypiper

./: .gitignore  .travis.yml  MANIFEST.in  README.md  RECIPES.md  command_line_args.md  design-notes.md  init_interactive.py  mkdocs.yml  ngstk.py  pypiper.py  pyproject.toml  sample_pipeline.py  setup.py  test_pypiper.py
.github/workflows/: black.yml  python-publish.yml  run-pytest.yml
data/: .~lock.mergeSampleTable.csv#  .~lock.projectSampleAnnotation.csv#  data.txt  mergeSampleTable.csv  projectSampleAnnotation.csv  projectSampleAnnotation.tsv  projectSampleAnnotation.txt  project_sample_loop.py  wgbs_pipeline.py
data/adapters/: epignome_adapters_2_add.fa
data/bsf_sheets/: 20150115_CORE_Seq_HL60_K562.xlsx
data/wgbs_pipeline/: wgbs-bismark-3.3.sh
doc/: Makefile
doc/source/: advanced.rst  api.rst  best-practices.rst  changelog.rst  commands.rst  conf.py  contributing.rst  develop-arguments.rst  develop-config.rst  develop-follow.rst  develop-statistics.rst  faq.rst  features.rst  functions.rst  getting-started.rst  hello-world.rst  index.rst  intro.rst  locating-pipelines.rst  ngstk.rst  outputs.rst  support.rst  toolkits.rst  tutorials-advanced.rst  tutorials-basic.rst  tutorials-first.rst  tutorials.rst  usage.rst  your-first-pipeline.rst
docs/: README.md  advanced-run-method.md  best-practices.md  changelog.md  clean.md  cli.md  conf.py  configuration.md  contributing.md  faq.md  features.md  functions.rst  index.rst  intro.rst  ngstk.rst  ngstk_intro.md  outputs.md  philosophy.md  pipestat.md  report.md  support.md  toolkits.md  tutorials.rst
docs/autodoc_build/: ngstk.md  pypiper.md
docs_jupyter/: basic-pipeline.ipynb  hello-world.ipynb
example_pipelines/: basic.py  count_reads.py  hello_pypiper.py  logmuse_example.py
pipeline_output/: sample_pipeline_log.md
pipeline_scripts/: RNA-Bowtie_pipeline.sh  bitSeq_parallel.R  ngstk.py  pipetk.py  project_sample_loop.py  rnaBitSeq_pipeline.py  wgbs_pipeline.py
pipeline_scripts/wgbs_pipeline/: submit-3.3.sh
pypiper/: AttributeDict.py  __init__.py  _version.py  const.py  echo_dict.py  exceptions.py  flags.py  folder_context.py  manager.py  ngstk.py  notify.py  pipeline.py  pypiper.py  stage.py  utils.py
requirements/: reqs-build-release.txt  reqs-docs.txt  reqs-ngstk.txt  reqs-plot.txt  reqs-pypiper.txt  reqs-test.txt  requirements-docs.txt  requirements-ngstk.txt  requirements-pypiper.txt  requirements-test.txt
src_pipeline/: ngstk.py  pipetk.py  qc_out.R  submit_RNA-Bowtie.sh
src_pipeline/slurm/: CORE_HL60_500_1_wgbs.sub  CORE_HL60_500_2_wgbs.sub  CORE_K562_1_1_wgbs.sub  CORE_K562_1_2_wgbs.sub  CORE_K562_4_wgbs.sub  CORE_K562_500_1_wgbs.sub  CORE_K562_500_2_wgbs.sub  CORE_K562_50_wgbs.sub  CORE_KBM7_500_1_wgbs.sub  CORE_negative_control_1_wgbs.sub
tests/: conftest.py  helpers.py  test_attribute_dict.py  test_context_manager.py  test_echo_dict.py  test_error_messages.py  test_exports.py  test_logging_capture.py  test_logtee_bugs.py  test_ngstools.py  test_packaging.py  test_pipeline.py  test_pipeline_filepath.py  test_pipestat_record_id.py  test_profile_parsing.py  test_utils.py
tests/Data/: default_pipestat_output_schema.yaml  test_pipestat_output_schema.yaml
tests/data/: sample_output_schema.yaml  test_pipestat_output_schema.yaml
tests/integration/: test_pipeline_manager_checkpoint.py
tests/pipeline/: conftest.py  test_halt_equivalence.py  test_multi_pipeline_sample.py  test_pipeline.py  test_pipeline_checkpoint.py  test_pipeline_constructor.py
(+12 files in other folders)
